packages/regressions/regressions-2.1.1.tar.gz/regressions-2.1.1/regressions/errors/positions.py
def argument_position(position = 'only'):
    identifier = ''
    argument = 'argument'
    if position == 'only':
        identifier = argument
    else:
        identifier = position + ' ' + argument
    return identifier